--- a/package.json
+++ b/package.json
@@ -49,12 +49,12 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "eslint": "^5.2.0",
-    "eslint-config-prettier": "^2.9.0",
+    "eslint": "5.4.0",
+    "eslint-config-prettier": "2.10.0",
     "eslint-plugin-prettier": "^2.6.2",
     "husky": "^0.14.3",
-    "lint-staged": "^7.2.0",
-    "prettier": "^1.13.7",
+    "lint-staged": "7.2.2",
+    "prettier": "1.14.2",
     "rimraf": "^2.6.2",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "9.1.5",
