--- a/package.json
+++ b/package.json
@@ -71,10 +71,10 @@
   ],
   "dependencies": {
     "@freesewing/plugin-cutonfold": "0.9.0",
-    "@freesewing/plugin-dimension": "0.5.0",
-    "@freesewing/plugin-grainline": "0.0.2",
+    "@freesewing/plugin-dimension": "0.5.2",
+    "@freesewing/plugin-grainline": "0.0.3",
     "@freesewing/plugin-logo": "0.3.2",
-    "@freesewing/plugin-title": "0.6.2",
-    "@freesewing/plugin-scalebox": "0.1.0"
+    "@freesewing/plugin-scalebox": "0.1.0",
+    "@freesewing/plugin-title": "0.6.2"
   }
 }
